--- a/style.css
+++ b/style.css
@@ -1,3 +1,30 @@
 .fancy1 {
+	color:#DD0BF2;
+	font-family: comic sans ms century gotchic sans-serif;
+	font-size:2.3em;
+	font-weight:bold;
+}
+.fancy2 {
 	color: red;
+	font-size: 1.7em;
+
+}
+.nice {
+	font-family: helvetica;
+	font-size:2em;
+	color: #6202FF;
+
+}
+p {
+	font-family: impact  verdana sans-serif;
+	font-weight:bold;
+	font-size:1.2em;
+	color: green;
+}
+#container {
+	border: solid 2px orange;
+	height:auto;
+	width: 450px;
+	margin: 0 auto;
+	background-color:black;
 }
