--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ p {
 body {
 	background-image:url("image.jpg");
 	background-size:cover;
+	background-repeat:no-repeat;
 }
 h1 {
 	font-family: comic sans ms;
